fixing mobile logo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,9 @@ h1, p {
 	  max-width: 540px;
 	}
 	.logo {
-		align-content:center;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
 	}
   }
   
@@ -41,7 +43,9 @@ h1, p {
 	  max-width: 720px;
 	}
 	.logo {
-		align-content:center;
+		display: block;
+    margin-left: auto;
+    margin-right: auto;
 	}
   }
 
